# genai-agentos

./: .gitignore  DATABASE_SETUP.md  README.md  database_schema_dump.sql  docker-compose.yml  setup_database.sh  test_api.py
a2a/: Dockerfile  a2a.py  docker-compose.yml
agent_data/: build_vector_db.py  generate_employee_data.py  generate_location_data.py  generate_practitioner_data.py  generate_schedule_data.py  requirements.txt
agent_data/data/: employees.csv  practitioners.csv  schedules.csv
frontend-react/public/: index.html
frontend-react/src/: App.jsx
master-agent/: main.py
master-agent/utils/: chat_history.py
old-frontend/: Dockerfile  package-lock.json  package.json
old-frontend/src/: App.tsx  index.css  router.tsx
project-backend/: AI_INTEGRATION.md  Dockerfile  main.py  pyproject.toml
project-backend/src/db/: session.py
project-backend/src/logging/: log.py  logger.py
project-backend/src/routes/: api.py
project-backend/src/routes/account/: routes.py
project-backend/src/routes/account/schema/: create_schema.py  login_schema.py
project-backend/src/routes/account/util/: hash.py  token.py
project-backend/src/routes/conversation/: routes.py
project-backend/src/routes/conversation/schema/: conversation_schema.py
project-backend/src/routes/health/: routes.py
project-backend/src/routes/health/schema/: health_schema.py
project-backend/src/routes/message/: routes.py
project-backend/src/routes/message/schema/: message_schema.py
project-backend/src/services/: ai_service.py
provided-backend/: pyproject.toml
(+97 files in other folders)
