[project]
name = "project-backend"
version = "0.1.0"
description = "Add your description here"
dependencies = [
    "bcrypt>=4.3.0",
    "fastapi>=0.116.1",
    "psycopg>=3.2.9",
    "psycopg-binary>=3.2.9",
    "pydantic>=2.11.7",
    "pyjwt>=2.10.1",
    "uvicorn>=0.35.0",
    "websockets>=12.0",
    "asyncio-mqtt>=0.16.0",
    "greenlet>=3.1.1", # explicit dependency required for mac

]
